--- a/ports/ffmpeg/build.sh.in
+++ b/ports/ffmpeg/build.sh.in
@@ -91,7 +91,7 @@ OSX_ARCH_COUNT=0@OSX_ARCH_COUNT@
 build_ffmpeg() {
     echo "=== CONFIGURING ==="
 
-    sh "$PATH_TO_SRC_DIR/configure" "--prefix=$PATH_TO_PACKAGE_DIR" "--cc=$CC" @CONFIGURE_OPTIONS@ $@
+    sh "$PATH_TO_SRC_DIR/configure" "--prefix=$PATH_TO_PACKAGE_DIR" "--cc=$CC" "--pkg-config=pkg-config" @CONFIGURE_OPTIONS@ $@
 
     echo "=== BUILDING ==="
 
